Add fig to dockerize